// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cloud tenant form component should render adding form variant 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={true}
>
  <h3>
    Basic Information
  </h3>
  <Connect(MiqFormRenderer)
    buttonsLabels={
      Object {
        "submitLabel": "Add",
      }
    }
    canReset={false}
    onCancel={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "select-field",
            "label": "Cloud Provider/Parent Cloud Tenant",
            "menuPlacement": "bottom",
            "name": "ems_id",
            "options": Array [
              Object {
                "label": "Label 1",
                "value": 1,
              },
              Object {
                "label": "Label 2",
                "value": 2,
              },
              Object {
                "label": "Label 3",
                "value": 3,
              },
              Object {
                "label": "Label 4",
                "value": 4,
              },
            ],
            "placeholder": "<Choose>",
            "validate": Array [
              Object {
                "type": "required-validator",
              },
            ],
            "validateOnMount": true,
          },
          Object {
            "component": "text-field",
            "label": "Tenant Name",
            "maxLength": 128,
            "name": "name",
            "validate": Array [
              Object {
                "type": "required-validator",
              },
            ],
            "validateOnMount": true,
          },
        ],
      }
    }
  />
</Grid>
`;

exports[`Cloud tenant form component should render editing form variant 1`] = `
<Grid
  bsClass="container"
  componentClass="div"
  fluid={true}
>
  <h3>
    Edit Cloud Tenant
  </h3>
  <Connect(MiqFormRenderer)
    buttonsLabels={
      Object {
        "submitLabel": "Save",
      }
    }
    canReset={true}
    onCancel={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
    schema={
      Object {
        "fields": Array [
          Object {
            "component": "text-field",
            "label": "Tenant Name",
            "maxLength": 128,
            "name": "name",
            "validate": Array [
              Object {
                "type": "required-validator",
              },
            ],
            "validateOnMount": true,
          },
        ],
      }
    }
  />
</Grid>
`;
